@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX spawn-fcgi.confd 2359 SHA256 562d5f9da68a3f8be53fe4432e8bcde8e2b3297e25b848c46485dfba2b8168ca SHA512 8ca129440dc930122ae0673fb4336f7338bc941c4c2b0e4086a72e56181a25136db7c18b523f5a6a99a393bde53b4f01fc528067186cdc61c484c0cad641366a WHIRLPOOL 928525a66bc66132ce956b6b441a1fcccbe65228c96e0b6cc2ce38f4bad80653457393fb075f4871c412b49b22e725a6faa322747df5a83d09e7cc850f9f26b3
 AUX spawn-fcgi.initd 3167 SHA256 2e2983c6de29417d79ddc855141b5cfaf7e2ace788b5f1c9982294837a8c4bee SHA512 e67181141b5e2c00958f5b89bc452e73b7cc9492c323f841c3b5d169463ef8f9946d3d58cd63b9c3047b5a3b1b833217d5a03d2059fd6ec010b4160c40b36c9e WHIRLPOOL 36192a4e673209a1d38fd4b6216da3660a72b96913208a1d7b73be0b4e272ba4422808d806ed754fd7643c7706c6d870f5ceafa657579259710a75b451ef551a
 AUX spawn-fcgi.initd-r1 3211 SHA256 29ef18e5170ec8a738260326e0948d2a72cb9c467affcf1a4f9cc298feae6134 SHA512 4a5596dc26fbbde2738ef838fe1cb5eb2b764a07059e4d99040ef508c7107a0a0b38756d4249c64044355d266c796570b9b829d0b6b49c587d322c51cf27888f WHIRLPOOL 8131086dfb6f7c3ebaa9725f04bf2a62821efcbf087f4ebfd6624f8e1f0e593764bb3cff0d0441d746d798fce95f2be462bffb506b9f5194db15f68fa2e7cff3
 DIST spawn-fcgi-1.6.3.tar.bz2 77607 SHA256 e6721dc0fa59bb00e05f160406815d53c95e81ac28f7e52fbd36497584f846cd SHA512 136a198cbcda0d3ae4e445eac2ccdcc5483801514ce77542c630d615a7a19a68864b9d7d79733adb16347ba64c833afbf2a18df82937107a6bc8467f630b03b4 WHIRLPOOL c424426e39f5151de29491b6e0900a546fcf7fb31a7b226c7246a79a5af62357d7dfddc9179aceb02d993fa09529e973794f70ece961336bb760763663080176
-EBUILD spawn-fcgi-1.6.3-r1.ebuild 900 SHA256 e6b5967c57a64bdd26ee423f55e9826cec8fa059c5991e879712044a0baf3600 SHA512 5dd0479bafc8e2619a3b5205056a937f589d0c9582284bda2c5aee28bdbaea6cf9527f0b7eb19b296625add0e95350848d0805b33241acf608c660b44d0a2695 WHIRLPOOL 53b848aa651dfc6e642905fca92ecda3bf9dcf62a2a109aea87b743ea85e2af05405d5b8921b0bc4c0ab063538f917fabe1b602810bb9e2649e7da210e80945e
-EBUILD spawn-fcgi-1.6.3.ebuild 1002 SHA256 37a8d5bf6fb60b3e67002c4a7b8f914005744f9645bc7721b5590905924cda20 SHA512 bf0e3b8929a10c67e7353472722731eb4a56c1f13b56b2b500d349a20f0bb97945a5565cbcc2ed5bc70cd5fbbe09074d943984700e0e1ae45e3ab2fb878aafa1 WHIRLPOOL 8ad5b4bcd7ecba2dee3409790a1e8817cd146c31e942bcd4d9f92abca79fd27003cf08fea7c5a60537a769317036e9ccc58d9471fb6d273f60e0666618923baa
-MISC ChangeLog 5100 SHA256 6777ff9d06d54c03d7f23cc51585473a08486893d3eb69e194913e66317d10e2 SHA512 bd8f35c84b9ea0ecc8e61ee42384d10fd389505968daf49d5a6888d8e1a222ac4018a7d5330681ff0e835de93b51e6e04ddb05cda61b4c79825d86bc862e1f16 WHIRLPOOL 8c116c1718fc01f975c3cab765c3a7968d6c508f6b8b76cd023683efdc7f5ef36a341d862efc2ce2f7b2f5c9e84b2a974758e2422f70fdac97b04199556fe011
+EBUILD spawn-fcgi-1.6.3-r1.ebuild 906 SHA256 996300f478fc0f4392ed6cbc87c44a137b6765ea85b0f38af7e090c325d945d7 SHA512 4aa52d3123fb12418ad06c44a18862e7228b85cafc3f975af24370b84ad0c4a2235e0b4d606a65d9920f8a86646c8e1ac2ce0be2efb73c8d4f449c724a8fcf56 WHIRLPOOL 2b4fb07445a529b6088101d13f5ba162f7c4133a7062d2eb9ed27c064012b9f45a3316fb8e4a36dd18bde0c4312eee797e99c11cd206eb70f28395d154f0297b
+EBUILD spawn-fcgi-1.6.3.ebuild 1006 SHA256 ccd241d2d380b12f1130fa95b74730d0e8f8ac700a868bd3a55c4001e3620bf4 SHA512 dc95007adadf8cdcadbaacc5b5b2deb0c18fdbc83e101cf85eb7f01927c15d8aa4e7f196278e57fd488cc5aff12a20a9b132a532e9e0f34c1f7fe50e8d7df939 WHIRLPOOL 80802a2c34f0b40abba654c27cf2e60f5b140b900097696ffb4f94f3d44ab70c8e127fd9d1c98dee2ef71b762aef4a8650d8a01a564d27c41d461f58d5ffbb35
+MISC ChangeLog 5245 SHA256 19347bb47142e43508f6c81527fde99c26ac055c37f78562fe76620d97ae40db SHA512 f778b417b7e0cc0ff79ca15ef50caef2dae815aacba7abba580580de4b023b7371ead91d4c2d57a6e1d8db6871aba3b196e240c49c807d791b97fd3dd3b98455 WHIRLPOOL 149fc0694d4856a037ac36b4c3401679c59da2f9bebdad2ec69e2d364a9788eaf6aee5da1351d7be157a0821826ecbff0ca0988441be18b33cc4965f591fe195
 MISC metadata.xml 501 SHA256 597e6cface1e86ba6e1cf45170c231f7f9bbf57a7a9c7cd48edb24863d83c0ef SHA512 6a02d7124f44aa984d1e383ac9f69d9148fc0cc334d677b8cab4bea63d2d46750d3b77ac3a9e849dadda5faa56a8a932e555ad43771becdd9f633bad54c33f1a WHIRLPOOL f07add0133468bcebe8c0bf17121a8e8d84d7951ee2fb2c1c379456582b6edf064c39229e6895cce3dc74021cc4f41f6cedb4679201f38d7c9ec6fbc7b0009a5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk/6xF0ACgkQVWmRsqeSphMAvQCeOS3XETbpmoXoVO0GnXmMLgGV
-bfgAnRFF6jrZuxmITrc1G+WBNthsuC2F
-=UtxQ
+iF4EAREIAAYFAk/+7kcACgkQ2ugaI38ACPDSIAEAoOHV0/6/g5XLXYZAv3V6q3xd
+kJrvITyZuSvt72GeF6IA/0UzXZsE1BZDA67A5QIgFioatb3KjVuMr+/kg2Cpx9t8
+=yq4j
 -----END PGP SIGNATURE-----
